# sem-seg-cars-driving

./: .gitattributes  .gitignore  Dockerfile  cnn_models.ipynb  cnn_models_light.ipynb  pyproject.toml  tensor_builder.ipynb  tensor_builder_light.ipynb
cnn/: task_unet_model.py  test.ipynb  training_job.ipynb
