[tool.poetry]
name = "sem-seg"
version = "0.1.0"
description = "Computer vision project to segment trafic pictures sementically."
authors = ["3la <blidiala32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.0.5"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
torch = "^2.2.1"
plotly = "^5.19.0"
pandas = "^2.2.1"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
